implemented gender popup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SmartLab</string>
+     <string-array name="gender">
+         <item>Мужской</item>
+         <item>Женский</item>
+     </string-array>
+    <string name="genderHint">Пол</string>
 </resources>
